# cpu

./: .gitignore  Cargo.toml  Dockerfile  Gopkg.toml  LICENSE  Makefile  README.md  TESTCPU  TESTDOCKERCPU  azure-pipelines.yml  go.mod  go.sum
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  go.yml  rust.yml
client/: client.go  client_test.go  cpio9p.go  cpio9p_test.go  cpu9p.go  cpu9p_plan9.go  cpu9p_unix.go  cpu9p_unix_test.go  cpu9p_windows.go  cpu_darwin.go  cpu_linux.go  cpu_plan9.go  cpu_test.go  cpu_windows.go  doc.go  fns.go  fns_test.go  getattr_darwin.go  getattr_linux.go  getattr_plan9.go  getattr_windows.go  srv.go  union.go  union9p.go  union9p_test.go
client/data/: a.cpio  b.cpio
cmds/cpu/: cpu.go  cpu9p.go  cpu9p_unix.go  cpu9p_unix_test.go  doc.go  getattr_darwin.go  getattr_linux.go  srv.go
cmds/cpud/: .gitignore  cpuddoc.go  init.go  init_darwin.go  init_freebsd.go  main.go  main_darwin.go  main_linux.go  main_mdns_linux.go  main_test.go  serve.go  serve_linux.go  serve_mdns_test.go  serve_test.go
cmds/cpuns/: .gitignore  main_linux.go  main_unix.go
cmds/cpuserver/: cpu.go
cmds/dcpu/: .gitignore  dcpu.go  doc.go
cmds/dcpud/: .gitignore  cpuddoc.go  init.go  main.go  serve.go
cmds/decpu/: .gitignore  decpu.go  doc.go
cmds/decpud/: .gitignore  cpuddoc.go  init.go  main_darwin.go  main_linux.go  serve.go  serve_test.go
cmds/dut/: doc.go  dut.go  dut_test.go  rpc.go  serve.go  uinit.go
configs/: 5.4.0
cpu/: client.go  cpu9p.go  cpu_linux.go  cpu_test.go  fns.go  getattr_linux.go  srv.go
docker/: .gitignore  Dockerfile  Makefile
ds/: doc.go  ds.go  ds_test.go
dut/: dut.go  dut_test.go  rpc.go  serve.go  uinit.go
initramfs/: initramfs.go  initramfs_linux_test.go  vm_linux_test.go  vm_test.go
mount/: mount.go  mount_darwin.go  mount_freebsd.go  mount_linux.go  mount_test.go
p9cpu/: Cargo.toml  README.md
p9cpu/crates/9p/: Cargo.toml  LICENSE  README.md
p9cpu/crates/9p/example/unpfs/: Cargo.toml
p9cpu/crates/9p/example/unpfs/src/: main.rs  utils.rs
p9cpu/crates/9p/src/: error.rs  fcall.rs  lib.rs  serialize.rs  srv.rs  unpfs.rs  utils.rs
p9cpu/crates/9p/src/unpfs/: utils.rs
p9cpu/crates/libp9cpu/: Cargo.toml  build.rs
p9cpu/crates/libp9cpu/src/: async_fd.rs  client.rs  cmd.proto  cmd.rs  launcher.rs  lib.rs  server.rs
p9cpu/crates/libp9cpu/src/client/: mod.rs
p9cpu/crates/libp9cpu/src/rpc/: mod.rs  p9cpu.proto  rpc_client.rs  rpc_server.rs
p9cpu/crates/libp9cpu/src/server/: mod.rs
p9cpu/crates/p9cpu/: Cargo.toml
p9cpu/crates/p9cpu/src/: p9cpu.rs
p9cpu/crates/p9cpud/: Cargo.toml
p9cpu/crates/p9cpud/src/: p9cpud.rs
server/: doc.go  key.go  server.go  server_freebsd.go  server_linux.go  server_linux_test.go  server_other.go  server_test.go
session/: doc.go  fns.go  session.go  session_freebsd.go  session_linux.go  session_other.go  session_plan9.go  session_test.go  session_unix.go
src/: main.rs
src/client/: mod.rs
systemd/: Makefile  README.md  cpud.service
sysvinit/: OpenWRT-23-etc-init.d-cpud  S50cpud-milkv-duo-sd-v1.14  S99cpud-init-buildroot
vm/: build.go  doc.go  initramfs_linux_test.go  ip_linux_test.go  vm.go  vm_linux_test.go
