[package]
name = "libp9cpu"
version = "0.1.0"
edition = "2021"

[lib]
name = "libp9cpu"
path = "src/lib.rs"

[dependencies]
futures = "0.3.25"
async-trait = "0.1.61"
prost = "0.11.5"
tonic = "0.8.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread","process","io-std", "fs", "io-util"] }
tokio-vsock = { version = "0.4", features = ["tonic-conn"] }
libc = "0.2.139"
thiserror = "1"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
log = "0.4"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.5"
