[package]
name = "p9cpu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p9cpu"
path = "src/p9cpu.rs"

[dependencies]
libp9cpu = { version = "*", path = "../libp9cpu" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread","process","io-std"] }
tokio-vsock = { version = "0.4", features = ["tonic-conn"] }
nix = "0.26.2"
